--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,13 @@
         "bezhansalleh/filament-panel-switch": "^2.0",
         "bezhansalleh/filament-shield": "^4.0",
         "filament/filament": "^4.0",
+        "joaopaulolndev/filament-pdf-viewer": "^2.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/tinker": "^2.10.1",
+        "secondnetwork/blade-tabler-icons": "^3.35"
     },
     "require-dev": {
+        "blade-ui-kit/blade-icons": "^1.8",
         "fakerphp/faker": "^1.23",
         "laravel-lang/common": "^6.7",
         "laravel/pail": "^1.2.2",
