--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -33,3 +33,5 @@ jobs:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
       run: php artisan test
+    - name: Laravel linting pint
+      run: ./vendor/bin/pint
