--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "secondnetwork/blade-tabler-icons": "^3.35"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.16",
         "blade-ui-kit/blade-icons": "^1.8",
         "fakerphp/faker": "^1.23",
         "laravel-lang/common": "^6.7",
