--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "joaopaulolndev/filament-pdf-viewer": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
-        "secondnetwork/blade-tabler-icons": "^3.35"
+        "secondnetwork/blade-tabler-icons": "^3.35",
+        "simplesoftwareio/simple-qrcode": "^4.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.16",
