se actualiza el workflow para automatic deploy

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -35,3 +35,9 @@ jobs:
       run: php artisan test
     - name: Laravel linting pint
       run: ./vendor/bin/pint
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
