config runner for write in registry

--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ "develop" ]
 
+permissions: # eliminar luego de pruebas
+  contents: read
+  packages: write
+
 jobs:
   laravel-tests:
 
