--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,13 +1,15 @@
-name: Larave Tests
+name: Larave Docker Build and Push
 
 on:
   push:
-    branches: [ "develop" ]
-  pull_request:
-    branches: [ "develop" ]
+    branches: [ "master" ]
+
+permissions: # eliminar luego de pruebas
+  contents: read
+  packages: write
 
 jobs:
-  laravel-tests:
+  laravel-docker-build-and-push:
 
     runs-on: ubuntu-latest
 
@@ -35,3 +37,18 @@ jobs:
       run: php artisan test
     - name: Laravel linting pint
       run: ./vendor/bin/pint
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Build and Push Docker Image
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        file: ./Dockerfile
+        push: true
+        tags: |
+          ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
+          ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:${{ github.sha }}
