--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "bezhansalleh/filament-panel-switch": "^2.0",
         "bezhansalleh/filament-shield": "^4.0",
         "filament/filament": "^4.0",
+        "joaopaulolndev/filament-edit-profile": "^2.0",
         "joaopaulolndev/filament-pdf-viewer": "^2.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
